tests/baselines/reference/restArgAssignmentCompat.errors.txt
tests/cases/compiler/restArgAssignmentCompat.ts(7,1): error TS2323: Type '(...x: number[]) => void' is not assignable to type '(x: number[], y: string) => void'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'number' is not assignable to type 'number[]'.
      Property 'length' is missing in type 'Number'.


==== tests/cases/compiler/restArgAssignmentCompat.ts (1 errors) ====
    function f(...x: number[]) {
        x.forEach((n, i) => void ('item ' + i + ' = ' + n));
    }
    function g(x: number[], y: string) { }
    
    var n = g;
    n = f;
    ~
!!! error TS2323: Type '(...x: number[]) => void' is not assignable to type '(x: number[], y: string) => void'.
!!! error TS2323:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2323:     Type 'number' is not assignable to type 'number[]'.
!!! error TS2323:       Property 'length' is missing in type 'Number'.
    n([4], 'foo');
    